# GPS-Pi-Bot

./: README.md  pi_requirements.txt  pyproject.toml
gps_bot/: direction.py  firebase_config.py  gps.py  gui.py  gui.ui  main.py  motors.py
gps_bot_app/: index.html  index.js  style.css
scripts/: azimutal_angle_formula.py  haversine_formula.py
