[tool.poetry]
name = "gps-bot"
version = "0.1.0"
description = ""
authors = ["Cornelio Posadas P <posadascornelio38@gmail.com>"]
readme = "README.md"
packages = [{include = "gps_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
tk = "0.1.0"
tkintermapview = "1.29"
pyrebase = "^3.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
